test: fixed kafka observability